# trove

./: .gitignore
backend/: Cargo.toml
backend/src/: main.rs  state.rs
backend/src/admin/: mod.rs
backend/src/admin/admin_handler/: admin_handler.rs
backend/src/admin/admin_service/: admin_service.rs
backend/src/admin/db/: admin_users_queries.rs  mod.rs
backend/src/config/: config.rs
backend/src/db/: connection.rs  menu_queries.rs  menu_queries_.rs  mod.rs  restaurant_queries.rs  template_queries.rs
backend/src/db/currency_queries/: currency.rs
backend/src/db/domains/: subdomain.rs
backend/src/db/menu_queries/: categories.rs  ingredients.rs  meal_groups.rs  meals.rs  mod.rs  pairings.rs  sizes.rs
backend/src/db/restaurants_queries/: mod.rs  restaurants.rs
backend/src/db/session_query/: create_session_query.rs  mod.rs
backend/src/db/template_queries/: events_template_queries.rs  menu_template_queries.rs  mod.rs
backend/src/db/user/: user_queries.rs
backend/src/handlers/: menu_handler.rs  mod.rs  restaurant_handler.rs  restaurant_handler_.rs  template_handler.rs
backend/src/handlers/auth_handler/: login.rs  signup.rs
backend/src/handlers/currency_handler/: currency.rs
backend/src/handlers/menu_handler/: categories.rs  ingredients.rs  meal_groups.rs  meals.rs  pairings.rs  sizes.rs
backend/src/handlers/restaurant_handler/: restaurant.rs
backend/src/handlers/session_handler/: mod.rs  restore.rs  session.rs
backend/src/handlers/template_handler/: events_template_handler.rs  menu_template_handler.rs  mod.rs
backend/src/middleware/: session_layer.rs
backend/src/models/: menu_item.rs  menu_model.rs  menu_models.rs  mod.rs  restaurant_models.rs
backend/src/models/auth_models/: login.rs  signup.rs
backend/src/models/currency_models/: currency.rs
backend/src/models/menu_models/: categories.rs  ingredient.rs  meal_groups.rs  meals.rs  mod.rs  pairings.rs  sizes.rs
backend/src/models/restaurants_models/: restaurants.rs
backend/src/models/session_models/: session.rs
backend/src/models/template_models/: menu_template_model.rs  (+3 more)
backend/src/pgbouncer/: pgbouncer.ini  userlist.txt
backend/src/routes/: admin_router.rs  auth_router.rs  currency_router.rs  main_router.rs  menu_router.rs  mod.rs  restaurant_router.rs  session_router.rs  template_router.rs
backend/src/services/: menu_service.rs  mod.rs  restaurant_service.rs  template_service.rs
backend/src/utils/: domains.rs  generate_username.rs  get_id.rs  mod.rs  session_guard.rs  session_token.rs  supabase_client.rs  tera_engine.rs
(+149 files in other folders)
