[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {  version = "0.8", features = ["macros"]}
tokio = { version = "1.47", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "macros", "runtime-tokio", "rust_decimal", "chrono", "uuid"] }
serde = { version = "1.0.225", features = ["derive"] }
anyhow = "1.0.99"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.5", features = ["cors","fs"] }
rust_decimal = "1.38.0"
http = "1.3.1"
once_cell = "1.21.3"
tera = "1.20.0"
serde_json = "1.0.145"
chrono = {version = "0.4.42", features = ["serde"]}
uuid = { version = "1.7", features = ["v4", "serde"] }
time = "0.3.44"
axum-extra = { version = "0.10.3", features = ["cookie"] }


